# fairness-drift-hypothesis-testing

./: .gitignore  Makefile  README.md  README_JASA_UPGRADE.md  pyproject.toml  requirements.txt
.github/workflows/: reproduce-jasa.yml
configs/: experiment_config.yaml
experiments/: run_fairness_drift_experiment.py  run_jasa_operating_characteristics.py  run_public_adult_validation.py  run_simulation.py
notebooks/: 01_exploratory_analysis.ipynb  02_generate_paper_figures.ipynb
results/tables/: bootstrap_ci_fairness_gap.csv  drift_detection_summary.csv  fairness_metrics.csv  hypothesis_test_results.csv  jasa_operating_characteristics.csv  jasa_power_table.csv  multiple_testing_results.csv  public_adult_validation.csv  threshold_sensitivity_results.csv
scripts/: verify_jasa_outputs.py
src/fairness_drift/: __init__.py  alert_rules.py  bootstrap.py  data_generator.py  drift_detection.py  hypothesis_tests.py  metrics.py  multiple_testing.py  power.py  reporting.py  visualization.py
tests/: test_alert_rules.py  test_bootstrap.py  test_drift_detection.py  test_hypothesis_tests.py  test_metrics.py  test_multiple_testing.py  test_power.py
